# TradeFlow-MicroSim

./: README.md
.github/workflows/: ci.yml
deployment/: docker-compose.yml
frontend/: .gitignore  package.json
frontend/pages/: index.js
infrastructure/grafana/: Dockerfile
infrastructure/grafana/provisioning/dashboards/: dashboard.yaml  order-matching-overview.json
infrastructure/prometheus/: prometheus.yml
scripts/: memory_test.sh  parse_bench.py  run_bench.sh
services/api-gateway/: .gitignore  Dockerfile  README.md  pom.xml
services/api-gateway/src/main/java/com/tradeflow/apigateway/: ApiGatewayApplication.java
services/api-gateway/src/main/java/com/tradeflow/apigateway/controllers/: OrderGatewayController.java
services/api-gateway/src/main/java/com/tradeflow/order/: CancelOrderRequest.java  CancelOrderRequestOrBuilder.java  CancelOrderResponse.java  CancelOrderResponseOrBuilder.java  GetOrderBookRequest.java  GetOrderBookRequestOrBuilder.java  GetOrderBookResponse.java  GetOrderBookResponseOrBuilder.java  ModifyOrderRequest.java  ModifyOrderRequestOrBuilder.java  ModifyOrderResponse.java  ModifyOrderResponseOrBuilder.java  OrderBookEntry.java  OrderBookEntryOrBuilder.java  OrderServiceGrpc.java  OrderServiceOuterClass.java  SubmitOrderRequest.java  SubmitOrderRequestOrBuilder.java  SubmitOrderResponse.java  SubmitOrderResponseOrBuilder.java  SubscribeTradesRequest.java  SubscribeTradesRequestOrBuilder.java  TradeUpdate.java  TradeUpdateOrBuilder.java
services/api-gateway/src/main/resources/: application.properties
services/hft-simulator/: .gitignore  CMakeLists.txt  Dockerfile  README.md
services/hft-simulator/api/: warpspeed.proto
services/hft-simulator/docker/: Dockerfile
services/hft-simulator/src/: main.cpp
services/hft-simulator/src/core/: market_data_simulator.cpp  market_data_simulator.h  matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h
services/hft-simulator/src/grpc/: server.cpp  server.h
services/hft-simulator/tests/core/: grpc_client_test.cpp
services/market-data-handler/: CMakeLists.txt  Dockerfile
services/market-data-handler/src/: main.cpp
services/order-matching-engine/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.bench  Dockerfile.runtime  README.md  bench_summary.md  order_service_pb2.py  order_service_pb2_grpc.py
services/order-matching-engine/docs/: DESIGN.md
services/order-matching-engine/docs/api/: OrderMatchingEngine.postman_collection.json
services/order-matching-engine/include/order_matching/: Matcher.hpp  Order.hpp  OrderBook.hpp  TradeLog.hpp
services/order-matching-engine/proto/: order_service.proto
services/order-matching-engine/scripts/: bench_entrypoint.sh
services/order-matching-engine/src/benchmarks/: OrderBench.cpp
services/order-matching-engine/src/order_matching/: Matcher.cpp  Order.cpp  OrderBook.cpp  main.cpp
services/order-matching-engine/testdata/replays/: ReplayRunner.cpp
services/order-matching-engine/tests/data/replays/: simple_replay.json
services/order-matching-engine/tests/integration/: integration_test.sh  test_client.py  test_service.sh
services/order-matching-engine/tests/unit/: OrderBook_test.cpp  replay_test.cpp
